--- a/tests/test-pokeravatar.py.in
+++ b/tests/test-pokeravatar.py.in
@@ -267,8 +267,7 @@ class PokerAvatarTestCaseBaseClass(unittest.TestCase):
         avatar = self.service.avatars[id]
         table = self.service.getTable(gameId)
         avatar.queuePackets()
-        avatar.handlePacketLogic(PacketPokerTableJoin(serial = client.getSerial(),
-                                                      game_id = gameId))
+        avatar.handlePacketLogic(PacketPokerTableJoin(serial = client.getSerial(),game_id = gameId))
         total = 2 + len(statsExpected)
         found = 0
         for packet in avatar.resetPacketsQueue():
@@ -282,7 +281,7 @@ class PokerAvatarTestCaseBaseClass(unittest.TestCase):
                 self.assertEquals(packet.betting_structure, struct)
                 self.assertEquals(packet.variant, variant)
                 self.assertEquals(packet.reason, reason)
-                for  (kk, vv) in avatar.tables.items():
+                for (kk, vv) in avatar.tables.items():
                     self.assertEquals(vv.game.id, table.game.id)
                     self.assertEquals(vv.game.name, name)
                     self.assertEquals(vv.game.max_players, max_players)
@@ -4143,26 +4142,25 @@ class PokerAvatarTestCase(PokerAvatarTestCaseBaseClass):
         return d
     # ------------------------------------------------------------------------
     def test88_avatar_with_same_login(self):
+        _seatPlayer = self.service.seatPlayer
+        self.service.seatPlayer = lambda service,*args,**kw: True
         a1 = self.service.createAvatar()
         a1.relogin(1)
         a1.queuePackets()
-        a1.handlePacketLogic(PacketPokerTableJoin(serial = 1,
-                                                      game_id = 2))
+        a1.handlePacketLogic(PacketPokerTableJoin(serial = 1, game_id = 2))
         a1.handlePacketLogic(PacketPokerSetRole(serial = 1, roles = PacketPokerSetRole.PLAY))
-        a1.handlePacketLogic(PacketPokerSeat(serial = 1,
-                                             seat = 1,
-                                             game_id = 2))
+        a1.handlePacketLogic(PacketPokerSeat(serial = 1, seat = 1, game_id = 2))
         a2 = self.service.createAvatar()
         a2.relogin(1)
         a2.queuePackets()
-        a2.handlePacketLogic(PacketPokerTableJoin(serial = 1,
-                                                      game_id = 2))
+        a2.handlePacketLogic(PacketPokerTableJoin(serial = 1,game_id = 2))
         self.assertEquals(2, len(self.service.avatar_collection.get(1)))
         self.assertEquals(2, len(self.service.tables[2].avatar_collection.get(1)))
         self.assertEquals(True, 1 in self.service.tables[2].game.serial2player)
         self.service.destroyAvatar(a2)
         self.assertEquals(1, len(self.service.tables[2].avatar_collection.get(1)))
         self.assertEquals(True, 1 in self.service.tables[2].game.serial2player)
+        self.service.seatPlayer = _seatPlayer
 
 ##############################################################################
 class PokerAvatarNoClientServerTestCase(unittest.TestCase):
