--- a/tests/test-pokergameclient.py.in
+++ b/tests/test-pokergameclient.py.in
@@ -19,6 +19,7 @@
 # "AGPLv3".  If not, see <http://www.gnu.org/licenses/>.
 #
 import sys
+import os
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
